test/files/neg/t2442.check
t2442.scala:5: warning: match may not be exhaustive.
It would fail on the following input: THREE
  def f(e: MyEnum) = e match {
                     ^
t2442.scala:12: warning: match may not be exhaustive.
It would fail on the following input: BLUE
  def g(e: MySecondEnum) = e match {
                           ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
